Fixed https://bugs.eclipse.org/bugs/show_bug.cgi?id=216395